--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,4 +22,4 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: restaurant_db
     ports:
-      - "5433:5432"
+      - "5434:5432"  # Changed from 5433 to 5434
